<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.oracle.weblogic.sample.medrec-javaee</groupId>
  <artifactId>modules</artifactId>
  <version>2.0</version>
  <name>modules</name>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <wls.url>t3://@SERVER_HOST:@SERVER_PORT</wls.url>
    <wls.user>@DOMAIN_USERNAME</wls.user>
    <wls.password>@DOMAIN_USER_PASSWORD</wls.password>
    <wls.adminServer>@SERVER_NAME</wls.adminServer>
  </properties>

  <modules>
    <module>common</module>
    <module>gar</module>
    <module>medrec</module>
    <module>physician</module>
    <module>chat</module>
    <module>medrec-data-import</module>
    <module>browser-starter</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>com.oracle.weblogic</groupId>
      <artifactId>weblogic-server-pom</artifactId>
      <version>12.2.1-4-0</version>
      <type>pom</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.platform</groupId>
      <artifactId>jakarta.jakartaee-api</artifactId>
      <version>9.1.0</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.3.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.3.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>3.6</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>2.6</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <defaultGoal>install</defaultGoal>
    <finalName>${project.name}</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
        <!-- This is the configuration for the weblogic-maven-plugin -->
          <groupId>com.oracle.weblogic</groupId>
          <artifactId>weblogic-maven-plugin</artifactId>
          <version>12.2.1-4-0</version>
          <configuration>
            <adminurl>${wls.url}</adminurl>
            <user>${wls.user}</user>
            <password>${wls.password}</password>
            <!--The location of the file or directory to be deployed -->
            <source>${project.build.directory}/${project.build.finalName}.${project.packaging}</source>
            <!--The target servers where the application is deployed. -->
            <targets>${wls.adminServer}</targets>
            <verbose>true</verbose>
            <name>${project.build.finalName}</name>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-ear-plugin</artifactId>
          <version>2.8</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-ejb-plugin</artifactId>
          <version>2.3</version>
          <configuration>
            <ejbVersion>3.1</ejbVersion>
            <jarName>${project.name}</jarName>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.4.0</version>
          <configuration>
            <warName>${project.name}</warName>
            <failOnMissingWebXml>false</failOnMissingWebXml>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
          <configuration>
            <includes>
              <include>**/Test*.java</include>
              <include>**/*TestCase.java</include>
            </includes>
            <properties>
              <excludeTags>slow</excludeTags>
            </properties>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
          <configuration>
            <finalName>${project.name}</finalName>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.0</version>
          <configuration>
            <release>21</release>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
